force-app/main/default/objects/eCard_Status_Detail__x/eCard_Status_Detail__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_status_detail</externalName>
    <label>eCard_Status_Detail</label>
    <pluralLabel>eCard_Status_Detail</pluralLabel>
</CustomObject>