force-app/main/default/objects/eCard_Status_Detail__x/fields/attachement_not_verified__c.field-meta.xml
<CustomField>
    <fullName>attachement_not_verified__c</fullName>
    <description>attachement_not_verified</description>
    <externalDeveloperName>attachement_not_verified</externalDeveloperName>
    <label>attachement_not_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>