force-app/main/default/objects/eCard_Status_Detail__x/fields/defect__c.field-meta.xml
<CustomField>
    <fullName>defect__c</fullName>
    <description>defect</description>
    <externalDeveloperName>defect</externalDeveloperName>
    <label>defect</label>
    <length>200</length>
    <type>Text</type>
</CustomField>