force-app/main/default/objects/eCard_Status_Detail__x/fields/discepancy_count__c.field-meta.xml
<CustomField>
    <fullName>discepancy_count__c</fullName>
    <description>discepancy_count</description>
    <externalDeveloperName>discepancy_count</externalDeveloperName>
    <label>discepancy_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>