force-app/main/default/objects/eCard_Status_Detail__x/fields/internal_name_bus_c__c.field-meta.xml
<CustomField>
    <fullName>internal_name_bus_c__c</fullName>
    <description>internal_name_bus__c</description>
    <externalDeveloperName>internal_name_bus__c</externalDeveloperName>
    <label>internal_name_bus__c</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>