force-app/main/default/objects/eCard_Status_Detail__x/fields/mode__c.field-meta.xml
<CustomField>
    <fullName>mode__c</fullName>
    <description>mode</description>
    <externalDeveloperName>mode</externalDeveloperName>
    <label>mode</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>