force-app/main/default/objects/eCard_Status_Detail__x/fields/out_of_factory_location__c.field-meta.xml
<CustomField>
    <fullName>out_of_factory_location__c</fullName>
    <description>out_of_factory_location</description>
    <externalDeveloperName>out_of_factory_location</externalDeveloperName>
    <label>out_of_factory_location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>