force-app/main/default/objects/eCard_Status_Detail__x/fields/part_description__c.field-meta.xml
<CustomField>
    <fullName>part_description__c</fullName>
    <description>part_description</description>
    <externalDeveloperName>part_description</externalDeveloperName>
    <label>part_description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>