force-app/main/default/objects/eCard_Status_Detail__x/fields/ready_row_notes__c.field-meta.xml
<CustomField>
    <fullName>ready_row_notes__c</fullName>
    <description>ready_row_notes</description>
    <externalDeveloperName>ready_row_notes</externalDeveloperName>
    <label>ready_row_notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>