force-app/main/default/objects/eCard_Status_Detail__x/fields/sell_today__c.field-meta.xml
<CustomField>
    <fullName>sell_today__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sell_today</description>
    <externalDeveloperName>sell_today</externalDeveloperName>
    <label>sell_today</label>
    <type>Checkbox</type>
</CustomField>