force-app/main/default/objects/eCard_Status_Detail__x/fields/shortage_count__c.field-meta.xml
<CustomField>
    <fullName>shortage_count__c</fullName>
    <description>shortage_count</description>
    <externalDeveloperName>shortage_count</externalDeveloperName>
    <label>shortage_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>