force-app/main/default/objects/eCard_Status_Detail__x/fields/shortage_rank__c.field-meta.xml
<CustomField>
    <fullName>shortage_rank__c</fullName>
    <description>shortage_rank</description>
    <externalDeveloperName>shortage_rank</externalDeveloperName>
    <label>shortage_rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>