force-app/main/default/objects/eCard_Status_Detail__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>