force-app/main/default/objects/eCard_Status_Detail__x/fields/total_shortages_ordered__c.field-meta.xml
<CustomField>
    <fullName>total_shortages_ordered__c</fullName>
    <description>total_shortages_ordered</description>
    <externalDeveloperName>total_shortages_ordered</externalDeveloperName>
    <label>total_shortages_ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>