force-app/main/default/objects/eCard_Status_Detail__x/fields/vendor_name__c.field-meta.xml
<CustomField>
    <fullName>vendor_name__c</fullName>
    <description>vendor_name</description>
    <externalDeveloperName>vendor_name</externalDeveloperName>
    <label>vendor_name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>